--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-uppercase text-dark mb-lg-4"><span style="background-color:white">二次元推薦小站</span></h1>
+                    <h1 class="display-1 text-uppercase text-white mb-lg-4"><span style="background-color:black">二次元推薦小站</span></h1>
                     
                     <p class="fs-4 text-white mb-lg-4"> </p>
                    
