--- a/V.html
+++ b/V.html
@@ -4,34 +4,21 @@
 <head>
     <meta charset="utf-8">
     <title>Vtuber推薦區</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
 
-    <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">  
-
-    <!-- Icon Font Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 	
 	  <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
+</head>
 </head>
 
 <body>
@@ -218,7 +205,7 @@
                                     
                                     <h5 class="text-uppercase mb-3 animate__animated animate__flipInX">ren zotto</h5>
                                     <p>來自異世界異星的兇惡王子，他操縱獨特的音調，決心征服地球</p>
-                                    <a class="text-primary text-uppercase" href="REN.HTML">Read More<i class="bi bi-chevron-right"></i></a>
+                                    <a class="text-primary text-uppercase" href="REN.html">Read More<i class="bi bi-chevron-right"></i></a>
                                 </div>
                             </div>
                         </div>
