--- a/SHIEN.html
+++ b/SHIEN.html
@@ -113,7 +113,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded" src="http://i0.hdslb.com/bfs/archive/27cce7673b698671eb7b28a300179b5c74995f0e.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded" src="https://i.pinimg.com/736x/f4/12/eb/f412eb3780750aee0a94a6b9ad72dd72.jpg" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
