--- a/SHIEN.html
+++ b/SHIEN.html
@@ -4,29 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>Kageyama Shien</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
-    <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">  
-
-    <!-- Icon Font Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+	
+	  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
@@ -66,9 +56,9 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-uppercase text-dark mb-lg-4"><span style="background-color:white">Kageyama Shien</span></h1>
+                    <h1 class="animate__animated animate__fadeIn display-1 text-uppercase text-white mb-lg-4">Kageyama Shien</h1>
                     
-                    <p class="fs-4 text-white mb-lg-4">獸人的世界中某黑手黨BOSS。為了尋找行蹤不明的友人而來到這邊的世界</p>
+                    <p class="animate__animated animate__fadeIn fs-4 text-white mb-lg-4">獸人的世界中某黑手黨BOSS。為了尋找行蹤不明的友人而來到這邊的世界</p>
                    
                 </div>
             </div>
@@ -113,7 +103,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded" src="https://i.pinimg.com/736x/f4/12/eb/f412eb3780750aee0a94a6b9ad72dd72.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded" src="https://pbs.twimg.com/media/EvDhAsXU4AkHX_0.jpg:small" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
