--- a/實況主.html
+++ b/實況主.html
@@ -4,28 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>實況主推薦區</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="Free HTML Templates" name="keywords">
-    <meta content="Free HTML Templates" name="description">
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
+     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">  
-
-    <!-- Icon Font Stylesheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
     <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-
-    <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 	
 	  <link
@@ -69,9 +54,9 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-uppercase text-dark mb-lg-4 animate__animated animate__bounce"><span style="background-color:white">實況主推薦區</span></h1>
+                    <h1 class="display-1 text-uppercase text-white mb-lg-4 animate__animated animate__bounce">實況主推薦區</h1>
                     
-                    <p class="text-white mb-lg-4"><span style="background-color:black">虛擬實況主，以虛擬人物形象在網路影片平台上傳影片或進行直播的創作者</span></p>
+                    <p class="animate__animated animate__bounce fs-4 text-white mb-lg-4">虛擬實況主，以虛擬人物形象在網路影片平台上傳影片或進行直播的創作者</span></p>
                     
                 </div>
             </div>
