--- a/DBD.html
+++ b/DBD.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>黎明死線</title>
-
-    <link href="img/favicon.ico" rel="icon">
-
+  <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -14,6 +12,11 @@
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+	
+	  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
@@ -51,9 +54,9 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-uppercase text-dark mb-lg-4"><span style="background-color:white">黎明死線</span></h1>
+                   <h1 class="animate__animated animate__fadeIn display-1 text-uppercase text-white mb-lg-4">黎明死線</h1>
                     
-                    <p class="fs-4 text-white mb-lg-4">1V4不對稱競技遊戲</p>
+                    <p class="animate__animated animate__fadeIn fs-4 text-white mb-lg-4">1V4不對稱競技遊戲</p>
                    
                 </div>
             </div>
