--- a/V.html
+++ b/V.html
@@ -56,9 +56,9 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-uppercase text-dark mb-lg-4 animate__animated animate__bounce"><span style="background-color:white">Vtuber推薦區</span></h1>
+                    <h1 class="display-1 text-uppercase text-white mb-lg-4 animate__animated animate__bounce">Vtuber推薦區</h1>
                     
-                    <p class="text-white mb-lg-4"><span style="background-color:black">虛擬實況主，以虛擬人物形象在網路影片平台上傳影片或進行直播的創作者</span></p>
+                    <p class="animate__animated animate__bounce fs-4 text-white mb-lg-4">虛擬實況主，以虛擬人物形象在網路影片平台上傳影片或進行直播的創作者</span></p>
                     
                 </div>
             </div>
