--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta charset="utf-8">
     <title>二次元推薦小站</title>
     <meta name="description" content="不知道要看什麼玩什麼嗎?這裡有各種推薦的Vtuber、遊戲和實況主，快來尋找真愛吧！">
-   
+    <link href="img/favicon.ico" rel="icon">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">  
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="lib/flaticon/font/flaticon.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+	
+	  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
@@ -44,10 +56,8 @@
         <div class="container py-5">
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="display-1 text-uppercase text-white mb-lg-4"><span style="background-color:black">二次元推薦小站</span></h1>
-                    
-                    <p class="fs-4 text-white mb-lg-4"> </p>
-                   
+                    <h1 class="display-1 text-uppercase text-white mb-lg-4 animate__animated animate__bounce">二次元推薦小站</h1>
+
                 </div>
             </div>
         </div>
