--- a/實況主.html
+++ b/實況主.html
@@ -56,7 +56,7 @@
                 <div class="col-lg-8 text-center text-lg-start">
                     <h1 class="display-1 text-uppercase text-white mb-lg-4 animate__animated animate__bounce">實況主推薦區</h1>
                     
-                    <p class="animate__animated animate__bounce fs-4 text-white mb-lg-4">虛擬實況主，以虛擬人物形象在網路影片平台上傳影片或進行直播的創作者</span></p>
+                    <p class="animate__animated animate__bounce fs-4 text-white mb-lg-4">在互聯網上公開電子遊戲直播的人</span></p>
                     
                 </div>
             </div>
