--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+<audio autoplay="autoplay" controls="controls"loop="loop" preload="auto"
+       src="music/MAYDAY.mp3">
+ </audio>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">二次元推薦小站</a>
