--- a/DBD.html
+++ b/DBD.html
@@ -78,7 +78,7 @@
                     <p class="lead">1V4不對稱競技遊戲</p>
 		<p class="lead">在steam上架付費遊戲</p>
 		<p class="lead">恐怖生存風格</p>
-		<p class="lead">類陣營為倖存者，敵方為殺手</p>
+		<p class="lead">人類陣營為倖存者，敵方為殺手</p>
 		<p class="lead">每個倖存者和屠夫都有三個專屬的技能，倖存者的目標是修完四台發電機並成功開門逃出</p>
 		<p class="lead">殺手目標為獻祭倖存者給惡靈</p>
 
