--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>二次元推薦小站</title>
     <meta name="description" content="不知道要看什麼玩什麼嗎?這裡有各種推薦的Vtuber、遊戲和實況主，快來尋找真愛吧！">
+	<meta name="keywords" content="推薦，Vtuber，遊戲，實況主，不知道要看什麼，二次元">
     <link href="img/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">  
